# opencl-benchmarks

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
lib/benchmarks/: CMakeLists.txt
lib/benchmarks/include/: vecmul.h  vector_multiplication.h
lib/benchmarks/src/: vector_multiplication.c
lib/benchmarks/src/vecmul/: cpu_vecmul.c  ocl_vecmul.c
lib/benchmarks/src/vecmul/opencl/: kernel.c  preparation.c  release.c
lib/opencl/: CMakeLists.txt
lib/opencl/include/: opencl.h
lib/opencl/src/: device.c  error.c  kernel.c  opencl.c  release.c
src/opencl-benchmarks/: CMakeLists.txt
src/opencl-benchmarks/include/: opencl-benchmarks.h
src/opencl-benchmarks/src/: opencl-benchmarks.c  opencl-benchmarks.cc  vector_multiplication.cc
src/opencl-benchmarks/src/vecmul/: cpu_vecmul.cc  ocl_vecmul.cc
test/: CMakeLists.txt
test/lib/benchmarks/: CMakeLists.txt
test/lib/benchmarks/src/: benchmarks.cc  vector_multiplication.cc
test/src/opencl-benchmarks/: CMakeLists.txt
test/src/opencl-benchmarks/src/: opencl-benchmarks.cc
